[workspace]
members = [
  "http-api",
  "org-node",
  "git-server",
  "shared",
]

[patch.crates-io.git-repository]
git = "https://github.com/Byron/gitoxide.git"
rev = "bf0106ea21734d4e59d190b424c22743c22da966"

[patch.crates-io.radicle-daemon]
# git = "https://github.com/radicle-dev/radicle-link"
# rev = "2df248a8e077d02cbb075da073dbe7ab9e282a70"
# rev = "ee419310c46ec6fda3917d48760b435ae82066d6"
path = "../radicle-link/daemon"

[patch.crates-io.librad]
# git = "https://github.com/radicle-dev/radicle-link"
# rev = "2df248a8e077d02cbb075da073dbe7ab9e282a70"
# rev = "ee419310c46ec6fda3917d48760b435ae82066d6"
path = "../radicle-link/librad"

[patch.crates-io.link-git-protocol]
# git = "https://github.com/radicle-dev/radicle-link"
# rev = "2df248a8e077d02cbb075da073dbe7ab9e282a70"
# rev = "ee419310c46ec6fda3917d48760b435ae82066d6"
path = "../radicle-link/link-git-protocol"

[patch.crates-io.ethers]
git = "https://github.com/gakonst/ethers-rs"
branch = "master"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"

[profile.release]
debug = true
