[workspace]
members = [
  "http-api",
  "org-node",
  "git-server",
  "shared",
]

[patch.crates-io.git-repository]
git = "https://github.com/Byron/gitoxide.git"
rev = "bf0106ea21734d4e59d190b424c22743c22da966"

[patch.crates-io.radicle-daemon]
git = "https://github.com/radicle-dev/radicle-link"
rev = "03bc0a0f4ed6c2cff4eb63e2c2040860b502396c"

[patch.crates-io.librad]
git = "https://github.com/radicle-dev/radicle-link"
rev = "03bc0a0f4ed6c2cff4eb63e2c2040860b502396c"

[patch.crates-io.link-git-protocol]
git = "https://github.com/radicle-dev/radicle-link"
rev = "03bc0a0f4ed6c2cff4eb63e2c2040860b502396c"

[patch.crates-io.ethers]
git = "https://github.com/gakonst/ethers-rs"
branch = "master"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"

[profile.release]
debug = true
